tests/error/array_errors/non_array_subscript.py
from guppylang.decorator import guppy


@guppy
def main() -> None:
    l = [1, 2, 3]
    l[0] = 3

guppy.compile(main)