tests/error/array_errors/non_array_subscript.err
Error: Unsupported (at $FILE:7:4)
  | 
5 | def main() -> None:
6 |     l = [1, 2, 3]
7 |     l[0] = 3
  |     ^^^^ Subscript assignments to non-arrays are not supported

Guppy compilation failed due to 1 previous error
